Part of industry converted... Just blocks/items/recipes left.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -1265,17 +1265,20 @@ grimpack.manual.industry.subsection.reactor.page.iron_parts.title=Iron Parts
 grimpack.manual.industry.subsection.reactor.page.reactor=Finally you have all of the parts necessary for creating a Nuclear Reactor. The Nuclear Reactor is needed for the creation of a Nuclear Bomb and if you right click on it you can have it emit a redstone signal, right click again to turn it off.
 grimpack.manual.industry.subsection.reactor.page.reactor.title=Nuclear Reactor
 grimpack.manual.industry.subsection.explosives=Explosives
-grimpack.manual.industry.subsection.explosives.page.aluminium=To get started in the creation of explosives you will need Aluminium to create bomb shells.
-grimpack.manual.industry.subsection.explosives.page.aluminium.title=Aluminium
 grimpack.manual.industry.subsection.explosives.page.bomb_shell=Bomb Shells are needed to house the explosives themselves.
 grimpack.manual.industry.subsection.explosives.page.bomb_shell.title=Bomb Shells
 grimpack.manual.industry.subsection.explosives.page.c4=C4 is the first explosive added which is stronger than TNT. C4 does explode immediately once activated with redstone unlike TNT.
 grimpack.manual.industry.subsection.explosives.page.c4.title=C4
 grimpack.manual.industry.subsection.explosives.page.nuclear_bomb=The second explosive added is a Nuclear Bomb. The Nuclear Bomb is stronger than both TNT and C4 and makes a huge explosion once activated with redstone. Once activated it explodes immediately like C4. Enjoy!
 grimpack.manual.industry.subsection.explosives.page.nuclear_bomb.title=Nuclear Bomb
+grimpack.manual.industry.subsection.common=Common Items
+grimpack.manual.industry.subsection.common.page.iron_stick=Before you can build a few things in Industry you will need some source of iron sticks. This is one way of creating some.
+grimpack.manual.industry.subsection.common.page.iron_stick.title=Iron Stick
+grimpack.manual.industry.subsection.common.page.paint=The paint roller is used to modify the basic rway. When you right click on an rway block it will cycle through many different textures for the top. It can also be used with dye to paint siding blocks.
+grimpack.manual.industry.subsection.common.page.paint.title=Paint Roller
+grimpack.manual.industry.subsection.common.page.aluminum=A new ore that spawns around your world is Bauxite which when put in a furnace will create aluminum ingots.
+grimpack.manual.industry.subsection.common.page.aluminum.title=Aluminum Ingot
 grimpack.manual.industry.subsection.gates=Gates
-grimpack.manual.industry.subsection.gates.page.iron_stick=Before you can build castle gates you will need to make iron sticks to support them.
-grimpack.manual.industry.subsection.gates.page.iron_stick.title=Iron Grating
 grimpack.manual.industry.subsection.gates.page.gate=Castle gates when placed will place more gate blocks until they reach the ground. They can be retracted when paired with the Gate Trumpet.
 grimpack.manual.industry.subsection.gates.page.gate.title=Castle Gate
 grimpack.manual.industry.subsection.gates.page.trumpet=The Gate Trumpet is used to retract Castle Gates, just right click in the area of a Castle Gate and it will retract all gate blocks that are in the area.
@@ -1298,11 +1301,7 @@ grimpack.manual.industry.subsection.rways.page.asphalt=Asphalt is created from t
 grimpack.manual.industry.subsection.rways.page.asphalt.title=Asphalt
 grimpack.manual.industry.subsection.rways.page.rways=Their are 3 types of rways. The basic rways which can later be modified, light rways that can emit light when active, and manhole rways which when right clicked you can pass through the block.
 grimpack.manual.industry.subsection.rways.page.rways.title=RWays
-grimpack.manual.industry.subsection.rways.page.paint=The paint roller is used to modify the basic rway. When you right click on an rway block it will cycle through many different textures for the top.
-grimpack.manual.industry.subsection.rways.page.paint.title=Paint Roller
 grimpack.manual.industry.subsection.metalworks=Metal Works
-grimpack.manual.industry.subsection.metalworks.page.alumingot=A new ore that spawns around your world is Bauxite which when put in a furnace will create aluminium ingots.
-grimpack.manual.industry.subsection.metalworks.page.alumingot.title=Aluminium Ingot
 grimpack.manual.industry.subsection.metalworks.page.alumstuff=Two things that will be used later that you can create with Aluminium Ingots are Aluminium Cans and Aluminium Shafts.
 grimpack.manual.industry.subsection.metalworks.page.alumstuff.title=Aluminium Stuff
 grimpack.manual.industry.subsection.metalworks.page.buckladd=Some other things that you can create out of aluminium are Buckets and Ladders.
@@ -1315,11 +1314,11 @@ grimpack.manual.industry.subsection.metalworks.page.steelstuff=Like aluminium th
 grimpack.manual.industry.subsection.metalworks.page.steelstuff.title=Steel Stuff
 grimpack.manual.industry.subsection.metalworks.page.steeltools=Also added in this mod is a full set of Steel Tools which are as good as Iron.
 grimpack.manual.industry.subsection.metalworks.page.steeltools.title=Steel Tools
-grimpack.manual.industry.subsection.metalworks.page.fuel=To power the Modern Furnace you will need Fuel. Fuel can't be crafted but needs to be refined and to get something to refine you can craft Super Crude Oil which is made from Oily Chunks and Aluminium Cans. You can get oily chunks from mining Black Gold Ore which is another ore that is randomly generated.
-grimpack.manual.industry.subsection.metalworks.page.fuel.title=Fuel
 grimpack.manual.industry.subsection.metalworks.page.metal_mesh=This block allows items to pass through it freely while stopping the player and mobs.
 grimpack.manual.industry.subsection.metalworks.page.metal_mesh.title=Metal Mesh
 grimpack.manual.industry.subsection.machines=Machines
+grimpack.manual.industry.subsection.machines.page.fuel=To power the Modern Furnace you will need Fuel. Fuel can't be crafted but needs to be refined and to get something to refine you can craft Super Crude Oil which is made from Oily Chunks and Aluminium Cans. You can get oily chunks from mining Black Gold Ore which is another ore that is randomly generated.
+grimpack.manual.industry.subsection.machines.page.fuel.title=Fuel
 grimpack.manual.industry.subsection.machines.page.info=Before you are able to craft any of the machines you will need to have made some steel. This is the main material in crafting of the machines. <br>Also a Modern Furnace requires you to have Fuel for it to be powered. So you will have to have made an oil derrick and refinery before you can get a modern furnace.
 grimpack.manual.industry.subsection.machines.page.info.title=Info
 grimpack.manual.industry.subsection.machines.page.refinery=To start refining to get fuel you will need the Refinery.
@@ -1336,6 +1335,8 @@ grimpack.manual.industry.subsection.machines.page.mfurnace_recipes=The Modern Fu
 grimpack.manual.industry.subsection.machines.page.mfurnace_recipes.title=Modern Furnace Recipes
 grimpack.manual.industry.subsection.machines.page.drill=Drills provide a quick way to mine down to layer 5. These can be placed and then right clicked and it will start mining. You may also place an inventory on the top to collect drops.
 grimpack.manual.industry.subsection.machines.page.drill.title=Drill
+grimpack.manual.industry.subsection.machines.page.conveyor_belt=Conveyor Belts allow you to transport items and entities along a certain path. Items will make sure to stay in the middle of the block so they don't fall off.
+grimpack.manual.industry.subsection.machines.page.conveyor_belt.title=Conveyor Belts
 grimpack.manual.industry.subsection.moderntech=Modern Tech
 grimpack.manual.industry.subsection.moderntech.page.doors=Their are 3 doors added with Modern Tech (Chain, Glass, and Steel). All doors are like regular doors and can be opened with your hand.
 grimpack.manual.industry.subsection.moderntech.page.doors.title=Doors
@@ -1345,8 +1346,6 @@ grimpack.manual.industry.subsection.moderntech.page.decoration=Some random decor
 grimpack.manual.industry.subsection.moderntech.page.decoration.title=Decoration Blocks
 grimpack.manual.industry.subsection.moderntech.page.paint=Their are four types of paint rollers, white, red, green, and blue. They are used to paint the Horizontal and Vertical Siding blocks. Just right click the blocks to paint them. All of the paint rollers can go back to the original Paint Roller by putting it in a crafting table with a Bucket of Water.
 grimpack.manual.industry.subsection.moderntech.page.paint.title=Paint
-grimpack.manual.industry.subsection.moderntech.page.conveyor_belt=Conveyor Belts allow you to transport items and entities along a certain path. Items will make sure to stay in the middle of the block so they don't fall off.
-grimpack.manual.industry.subsection.moderntech.page.conveyor_belt.title=Conveyor Belts
 grimpack.manual.industry.subsection.storage=Storage
 grimpack.manual.industry.subsection.storage.page.warehouse_crate=Crates allow you to store a single chests worth of items but can also be locked to keep your items safe.
 grimpack.manual.industry.subsection.storage.page.warehouse_crate.title=Crates
