Fully implement updated Treasure Mob. Can be tamed, will run away like ocelots, once tamed you can open the inventory and store items. Contains the items that would have been dropped if killed.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -947,6 +947,7 @@ entity.grimpack.Bobomb.name=Bob-omb
 entity.grimpack.ParaBuzzy.name=Parabuzzy
 entity.grimpack.SuicideBomber.name=Suicide Bomber
 
+entity.treasure.inventory=Treasure Chest
 grimpack.world.bobomb_chat=\247fYou are the Bob-omb!
 
 grimpack.subtitle.raygun=Raygun fired
