Add in Shaped Charges. I've had this laying around so I thought I would spruce it up and release.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -143,10 +143,29 @@ tile.steel_pipe.name=Steel Pipe
 tile.refinery.name=Refinery
 tile.steel_frame.name=Steel Framework
 tile.fuel_tank.name=Fuel Tank
+tile.shaped_charge.name=Shaped Charge
+tile.shaped_charge.radius= (Radius: %s)
 tile.randomite.name=Randomite
 tile.gunpowder_reed_block.name=Greed Block
 tile.glowstone_seeds.name=Glowstone Seed
 tile.corruption_block.name=Corruption Block
+#Shaped Charges
+tile.shaped_charge.0.name=Green Fungus
+tile.shaped_charge.1.name=Yellow Fungus
+tile.shaped_charge.2.name=Red Fungus
+tile.fungus_growing.3.name=Blue Fungus
+tile.fungus_growing.4.name=Purple Fungus
+tile.fungus_growing.5.name=Orange Fungus
+tile.fungus_growing.6.name=Pink Fungus
+tile.fungus_growing.7.name=Cyan Fungus
+tile.fungus_growing.8.name=Rapid Green Fungus
+tile.fungus_growing.9.name=Rapid Yellow Fungus
+tile.fungus_growing.10.name=Rapid Red Fungus
+tile.fungus_growing.11.name=Rapid Blue Fungus
+tile.fungus_growing.12.name=Rapid Purple Fungus
+tile.fungus_growing.13.name=Rapid Orange Fungus
+tile.fungus_growing.14.name=Rapid Pink Fungus
+tile.fungus_growing.15.name=Rapid Cyan Fungus
 #Growing Fungus
 tile.fungus_growing.0.name=Green Fungus
 tile.fungus_growing.1.name=Yellow Fungus
@@ -1439,6 +1458,10 @@ grimpack.manual.industry.subsection.storage.page.locksmith_workbench=A locksmith
 grimpack.manual.industry.subsection.storage.page.locksmith_workbench.title=Locksmith Workbench
 grimpack.manual.industry.subsection.storage.page.tank=Besides item storage there is also a very basic way to store any type of liquid, the tank. This block can store 8 buckets worth of a liquid but make sure to drain it before breaking!
 grimpack.manual.industry.subsection.storage.page.tank.title=Fluid Tanks
+grimpack.manual.industry.subsection.explosives.page.shaped_charge=A shaped charge will instantly mine the blocks below it until it hits a block that it can't mine.
+grimpack.manual.industry.subsection.explosives.page.shaped_charge.title=Shaped Charges
+grimpack.manual.industry.subsection.explosives.page.shaped_charge_radius=Shaped Charges are also able to be improved with a larger radius. Be warned the larger the radius the more it can lag out your game!
+grimpack.manual.industry.subsection.explosives.page.shaped_charge_radius.title=Shaped Charge - Radius
 
 grimpack.manual.tools.modinfo=Adds a bunch of weapons and useful tools.
 grimpack.manual.tools.subsection.masks=Masks
