Finalize additions for neptune and phoenix staff.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -1502,9 +1502,13 @@ grimpack.manual.tools.subsection.sling.page.slingshot=The slingshot can use many
 grimpack.manual.tools.subsection.sling.page.slingshot.title=Sling Shot
 grimpack.manual.tools.subsection.sling.page.pelletBag=The pellet bag can hold only pellets and instead of storing pellets in your inventory and taking up space you can put pellets in this bag and it can fire from the bag.
 grimpack.manual.tools.subsection.sling.page.pelletBag.title=Pellet Bag
-grimpack.manual.tools.subsection.staff=Powerstaff
+grimpack.manual.tools.subsection.staff=Staffs
 grimpack.manual.tools.subsection.staff.page.recipe=The powerstaff can move blocks. It has four different modes which can be switched with the mode key, M by default. Push mode pushes blocks forward and pull mode pulls blocks backward. If in float mode blocks do not have gravity applied to them and can be suspended in space. The player can 'ride' the block. In dropping mode gravity is applied. This makes blocks behave like gravel or sand.
-grimpack.manual.tools.subsection.staff.page.recipe.title=Recipe
+grimpack.manual.tools.subsection.staff.page.recipe.title=Powerstaff
+grimpack.manual.tools.subsection.staff.page.neptune=The Neptune Staff gives a player the ability to freeze mobs, freeze water, or place water out of thin air. Holding certain keys while right clicking can give different results as well as if you are clicking on a block or in air. Press help key (default: Left_Ctrl) to view key combos.
+grimpack.manual.tools.subsection.staff.page.neptune.title=Neptune Staff
+grimpack.manual.tools.subsection.staff.page.phoenix=The Phoenix Staff gives a player the ability to thaw mobs, thaw water, and place lava or fire out of thin air. Holding certain keys while right clicking can give different results as well as if you are clicking on a block or in air. Press help key (default: Left_Ctrl) to view key combos.
+grimpack.manual.tools.subsection.staff.page.phoenix.title=Phoenix Staff
 grimpack.manual.tools.subsection.pokeball=Pokeballs
 grimpack.manual.tools.subsection.pokeball.page.recipe=Pokeballs are amazing items that when thrown and hit a mob capture the mob inside. When thrown again the mob will be released. Be aware these do not tame the mob and that this saves the mobs data when captured and will be released exactly as before.
 grimpack.manual.tools.subsection.pokeball.page.recipe.title=Recipe
@@ -1673,7 +1677,7 @@ grimpack.manual.world.subsection.worldgen.page.info.title=Info
 grimpack.manual.world.subsection.fungus=Fungus
 grimpack.manual.world.subsection.fungus.page.green=Green fungi will be needed to make any of the colored fungi. All basic fungi doesn't really have a purpose except to grow and keep growing unless boxed in. Basic fungi will replace liquid and weak blocks. Breaking fungi with your hand can drop a slimeball, using a sword will drop the block itself. Basic Fungi have two types the normal and rapid, rapid grows faster.
 grimpack.manual.world.subsection.fungus.page.green.title=Green Fungi
-grimpack.manual.world.subsection.fungus.page.color=Colored fungi are just colored versions of the green variety. Grows unless enclosed, replaces liquid and weak blocks, breaking fungus with a hand can drop a slimeball, breaking them with a sword drops the block itself, and their are two types normal and rapid which rapid grows faster. The colors to choose from are <f>4<f>lRED<f>0<f>r, <f>2<f>lGREEN<f>0<f>r, <f>1<f>lBLUE<f>0<f>r, <f>5<f>lPURPLE<f>0<f>r, <f>e<f>lYELLOW<f>0<f>r, <f>6<f>lORANGE<f>0<f>r, <f>d<f>lPINK<f>0<f>r, <f>b<f>lCYAN<f>0<f>r.
+grimpack.manual.world.subsection.fungus.page.color=Colored fungi are just colored versions of the green variety. Grows unless enclosed, replaces liquid and weak blocks, breaking fungus with a hand can drop a slimeball, breaking them with a sword, shears, or silk touch drops the block itself, and their are two types normal and rapid which rapid grows faster. The colors to choose from are <f>4<f>lRED<f>0<f>r, <f>2<f>lGREEN<f>0<f>r, <f>1<f>lBLUE<f>0<f>r, <f>5<f>lPURPLE<f>0<f>r, <f>e<f>lYELLOW<f>0<f>r, <f>6<f>lORANGE<f>0<f>r, <f>d<f>lPINK<f>0<f>r, <f>b<f>lCYAN<f>0<f>r.
 grimpack.manual.world.subsection.fungus.page.color.title=Colored Fungi
 grimpack.manual.world.subsection.fungus.page.build=Building Fungi as the name suggests build different types of blocks. THese include block builders which build blocks as they grow but will not grow higher than you placed the blocks. Layer builders build a flat layer of the block specified. And liquid builder are just block builders but for lava and water. Building blocks include Netherrack, Sand, Dirt, Stone, Cobble, StoneBricks, SandStone, Glass.
 grimpack.manual.world.subsection.fungus.page.build.title=Building Fungi
@@ -1712,6 +1716,16 @@ help.mine.key1=mine ALL
 help.mine.key2=mine only DIRT, SAND, GRAVEL etc.
 help.mine.key3=mine only WOOD
 help.mine.key1.2=mining ORES from surface
+help.neptune.key1=(in air) freeze mobs
+help.neptune.key2=(in air) freeze water
+help.neptune.block=No Key - (on block) place water
+help.neptune.key1.block=(on block) freeze mobs
+help.neptune.key2.block=(on block) freeze water where clicked
+help.phoenix.key1=(in air) thaw mobs
+help.phoenix.key2=(in air) thaw ice
+help.phoenix.block=No Key - (on block) place lava
+help.phoenix.key1.block=(on block) place fire
+help.phoenix.key2.block=(on block) thaw ice where clicked
 result.wand.fill= blocks filled up with stone.
 result.wand.mine=No ores found.
 error.wand.nocave=No caves were found.
