Add in AutoTorch

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -793,6 +793,10 @@ Enable SubPart wands.tooltip=True to load Minecraft with the wands subpart of th
 grimpack.util.cfg.general=General Options
 grimpack.util.cfg.debug=Debug Options
 grimpack.util.cfg.general.tooltip=General options for configuring util
+grimpack.util.cfg.fusrodah=FusRoDah Options
+grimpack.util.cfg.fusrodah.tooltip=Options to modify the power of your shout
+grimpack.util.cfg.autotorch=Auto Torch Options
+grimpack.util.cfg.autotorch.tooltip=Options for light threshold and distance to place torches with Auto Torch
 grimpack.util.cfg.debug.tooltip=Useful options to help with debugging
 grimpack.util.cfg.tooltip=Config options for the utility part of the Grim Pack
 Horizontal Pushing Force.tooltip=The horizontal pushing force when using fusrodah
@@ -806,6 +810,12 @@ Use Infinite Lava.tooltip=True if lava becomes infinite
 Use Double Doors.tooltip=True if doors, trap doors, and fence gates open as double doors
 Enable Automatic Item Replacer.tooltip=True if the automatic item replacer will replace items when you run out
 Show collision boxes.tooltip=True if when you shift click and hover over blocks that you can see that blocks collision boxes
+AutoTorch Light Tolerance.tooltip=The light tolerance for auto torch. So when it hits below a certain light tolerance a new torch will be placed.
+AutoTorch Torch Distance.tooltip=How far to place the torch from the player
+grimpack.util.autotorch.d0=Distance: Under Player
+grimpack.util.autotorch.d1=Distance: 1 Block InFront
+grimpack.util.autotorch.d2=Distance: 2 Blocks InFront
+grimpack.util.autotorch.d3=Distance: 3 Blocks InFront
 
 grimpack.world.cfg.tooltip=Config options for the world generation part of the Grim Pack
 grimpack.world.cfg.general=General Options
@@ -879,6 +889,9 @@ grimpack.industry.fan.minusFive=-5
 grimpack.industry.fan.BLOW=Blow
 grimpack.industry.fan.SUCK=Suck
 grimpack.industry.combo=Combo: 
+
+grimpack.util.autotorch.on=AutoTorch Enabled
+grimpack.util.autotorch.off=AutoTorch Disabled
 
 container.item_tower=Item Tower
 container.item_tower.row= - Row %s of 
@@ -1681,6 +1694,9 @@ grimpack.manual.util.subsection.fusrodah.page.info.title=Info
 grimpack.manual.util.subsection.time=Time
 grimpack.manual.util.subsection.time.page.info=Adds a toggleable display that shows the time. This is activated by default using the G key but can be changed in the options.
 grimpack.manual.util.subsection.time.page.info.title=Info
+grimpack.manual.util.subsection.autotorch=Auto Torch
+grimpack.manual.util.subsection.autotorch.page.info=AutoTorch allows you to automatically place torches while walking around. If the block light level you're standing on gets below a certain threshold then you will place a torch. You can modify these values in the autotorch config section.
+grimpack.manual.util.subsection.autotorch.page.info.title=Info
 grimpack.manual.util.subsection.grave=Grave
 grimpack.manual.util.subsection.grave.page.info=When you die a Grave is created so that your items won't be lost. This grave will appear at your death location and will contain all of your items as well as current experience level. The headstone will contain your name, the date, and time of death. You can right click and open the gui or break to get everything back.
 grimpack.manual.util.subsection.grave.page.info.title=Info
